# Ruins_of_Hestia

./: .gitattributes  .gitignore  BUILD.bat  BUILD.sh  CMakeLists.txt  README.md
Game/: CMakeLists.txt
Game/include/: FollowTarget.h  FollowTargetVillage.h  FreeCamera.h  GamePCH.h  IsoCamera.h  RandomAudio.h  SettingsGame.h  StateMachine_PlantTest.h  TransiFeuillle.h  TweenEffects.h  UISettingsGame_Behavior.h  framework.h
Game/include/DebugBehavior/: AutoRotateDebug.h  CollisionTestDebug.h  MoveDebug.h  RotationDebug.h
Game/include/Dialogue/: DialogueBehaviour.h
Game/include/Expedition/: BackToVillageBehavior.h  BossBarHandler.h  EnnemiBehavior.h  Equipment.h  HealthBarController.h  HitBox.h  IrisFollowing.h  LivingEntityBehavior.h  PlayerController.h  PlayerInteraction.h  ResourceBehavior.h  ResourceFeedBackAnimation.h  ResourceSplashEffect.h  Stats.h  TutoBehaviors.h
Game/include/Map Generation/: EnnemiGeneratorBehavior.h  Map.h  MapGenerator.h  MapLayout.h  MapMask.h  ResourceGeneratorBehavior.h  Room.h  TerrainGeneratorBehavior.h  TileGroup.h
Game/include/RoomEditor/: RoomEditorBehavior.h  RoomMeta.h  RoomPreviewBehavior.h  SpawnerDebug.h
Game/include/Samples/: SceneAudio.h  SceneCollision.h  SceneCompute.h  SceneGraphics.h  SceneHDR.h  SceneShadows.h  SceneTransformTest.h  SceneUiTest.h
Game/include/Scenes/: MadeWithScene.h  SceneDefault.h  SceneDialogue.h  SceneExemple.h  SceneExpedition.h  SceneExpeditionPrep.h  SceneFBX.h  SceneMainMenu.h  SceneMeta.h  SceneRoomEditor.h  SceneSerializer.h  SceneVillageV1.h
Game/include/Tools/: MetaGenerator.h
Game/include/Village/: Building.h  BuildingData.h  BuildingManager.h  BuildingManager.inl  Inventory.h  Inventory.inl  Resource.h  Save.h  VillageActions.h  VillageConditions.h  VillageController.h  VillageManager.h  VillageManager.inl  VillageUiController.h
Game/source/: FollowTarget.cpp  FollowTargetVillage.cpp  FreeCamera.cpp  IsoCamera.cpp  SettingsGame.cpp  TransiFeuillle.cpp  TweenEffects.cpp  UISettingsGame_Behavior.cpp  main.cpp
Game/source/DebugBehavior/: AutoRotateDebug.cpp  CollisionTestDebug.cpp  MoveDebug.cpp  RotationDebug.cpp
Game/source/Dialogue/: DialogueBehaviour.cpp
Game/source/Expedition/: BackToVillageBehavior.cpp  BossBarHandler.cpp  EnnemiBehavior.cpp  Equipment.cpp  HealthBarController.cpp  HitBox.cpp  IrisFollowing.cpp  LivingEntityBehavior.cpp  PlayerController.cpp  PlayerInteraction.cpp  ResourceBehavior.cpp  ResourceFeedBackAnimation.cpp  ResourceSplashEffect.cpp  Stats.cpp  TutoBehaviors.cpp
Game/source/Map/: Editor.cpp  Map.cpp
Game/source/Map Generation/: EnnemiGeneratorBehavior.cpp  Map.cpp  MapGenerator.cpp  MapLayout.cpp  MapMask.cpp  ResourceGeneratorBehavior.cpp  Room.cpp  TerrainGeneratorBehavior.cpp  TileGroup.cpp
Game/source/RoomEditor/: RoomEditorBehavior.cpp  RoomMeta.cpp  RoomPreviewBehavior.cpp  SpawnerDebug.cpp
Game/source/Samples/: SceneAudio.cpp  SceneCollision.cpp  SceneCompute.cpp  SceneGraphics.cpp  SceneHDR.cpp  SceneShadows.cpp  SceneTransformTest.cpp  SceneUiTest.cpp
Game/source/Scenes/: MadeWithScene.cpp  SceneDefault.cpp  SceneDialogue.cpp  SceneExemple.cpp  SceneExpedition.cpp  SceneExpeditionPrep.cpp  SceneFBX.cpp  SceneMainMenu.cpp  SceneMeta.cpp  SceneRoomEditor.cpp  SceneSerializer.cpp  SceneVillageV1.cpp
Game/source/Tools/: MetaGenerator.cpp
Game/source/Village/: Building.cpp  BuildingManager.cpp  Inventory.cpp  Resource.cpp  VillageActions.cpp  VillageController.cpp  VillageManager.cpp  VillageUiController.cpp
Libraries/GPC_Assets/: CMakeLists.txt
Libraries/GPC_Assets/include/: Assets.h  FbxLoader.h  Loader.h
Libraries/GPC_Assets/source/: Assets.cpp  FbxLoader.cpp  Loader.cpp
Libraries/GPC_Audio/: CMakeLists.txt
Libraries/GPC_Audio/include/: Audio.h  AudioMath.h  AudioResource.h  IAudioVoice.h  StaticVoice.h  StreamVoice.h  WavParser.h
Libraries/GPC_Audio/source/: Audio.cpp  StaticVoice.cpp  StreamVoice.cpp  WavParser.cpp
Libraries/GPC_Engine/: CMakeLists.txt
Libraries/GPC_Engine/include/: AnimationComponent.h  AnimationSystem.h  AudioListener.h  AudioMixer.h  AudioSystem.h  AudioType.h  Behavior.h  BehaviorBlock.h  BehaviorBlockManager.h  CameraSystem.h  Collision2DSystem.h  Collision3DSystem.h  Component.h  ComponentBlock.h  ComponentBlock.hpp  ComponentsBlockManager.h  ECS_Defines.h  Engine.h  EnginePCH.h  EntityManager.h  LightingSystem.h  ParticleSystem.h  Render3DSystem.h  Scene.h  Scene.hpp  SceneManager.h  System.h  SystemManager.h  TransformComponents.h  Tween.h  Tween.inl  TweenSystem.h  UiConstants.h
Libraries/GPC_Engine/source/: AnimationSystem.cpp  AudioMixer.cpp  AudioSystem.cpp  Behavior.cpp  BehaviorBlock.cpp  BehaviorBlockManager.cpp  CameraSystem.cpp  Collision2DSystem.cpp  Collision3DSystem.cpp  Component.cpp  ComponentBlock.cpp  ComponentsBlockManager.cpp  Engine.cpp  EntityManager.cpp  LightingSystem.cpp  ParticleSystem.cpp  Render3DSystem.cpp  Scene.cpp  SceneManager.cpp  System.cpp  SystemManager.cpp  TransformComponents.cpp  TweenSystem.cpp
Libraries/GPC_Framework/: CMakeLists.txt  find_fbxsdk.cmake
Libraries/GPC_Framework/include/: Action.h  ArchiveManager.h  Behaviour.h  Blob.h  Callable.h  Clock.h  CompileTimeHash.h  Condition.h  Debugger.h  Defines.h  ErrorType.h  File.h  FrameworkPCH.h  GLM_Include.h  GPC_Framework.h  Object.h  Profiler.h  Random.h  SerialFile.h  SerialTree.h  StateMachine.h  Stream.h  Transform.h  Transition.h  Tweens.h  TypeID.h  VerboseLevel.h  WorkerThread.h
Libraries/GPC_Framework/source/: ArchiveManager.cpp  Blob.cpp  Clock.cpp  CompileTimeHash.cpp  Debugger.cpp  File.cpp  GPC_Framework.cpp  Profiler.cpp  Random.cpp  SerialFile.cpp  SerialTree.cpp  Stream.cpp  Transform.cpp  Tweens.cpp  TypeID.cpp  WorkerThread.cpp  glad.c
Libraries/GPC_Render/: CMakeLists.txt
Libraries/GPC_Render/include/: Buffer.h  Color.h  CommandBuffer.h  ComputeProgram.h  Font.h  Forward.h  Geometry.h  GraphicsProgram.h  IProgram.h  Inputs.h  Light.h  Material.h  Primitive.h  Render.h  RenderCommands.h  RenderDevice.h  RenderObject2D.h  RenderObject3D.h  RenderObjectBatched3D.h  Shader.h  (+9 more)
(+288 files in other folders)
